# kraken

./: .gitignore  CMakeLists.txt
python/: classification_change.py  extract_reads.py  fastq2bcl.py  incremental_kraken.py  sample_fastq.py  simulate_run.py  taxaStats.py  taxa_correct.py  trim_to_lenghts.py
run_test2/BaseCalls/L001/C12.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C14.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C15.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C16.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C19.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C2.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C20.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C21.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C22.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C23.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C25.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C26.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C28.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C29.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C3.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C30.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C34.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C36.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C38.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C40.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C42.1/: s_1_1101.bcl
run_test2/BaseCalls/L001/C44.1/: s_1_1101.bcl
scripts/: kraken
src/: Makefile  Queue.h  bclreader.cpp  classify.cpp  filemanager.cpp  filemanager.hpp  kraken_headers.hpp  krakenutil.cpp  krakenutil.hpp  seqreader.cpp  seqreader.hpp  set_lcas.cpp
(+54 files in other folders)
